[project]
name = "quill"
version = "0.1.0"
description = "Marimo Notebooks for CLI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "fastmcp>=2.10.6",
    "psutil>=5.9.0",
]

[project.scripts]
quill = "quill.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
